Finished Subscription Implementation (For Now)

--- a/configuration.yaml
+++ b/configuration.yaml
@@ -1,10 +1,10 @@
 # Make sure DB Port is not in conflict
 # Spent hours trying to make it work before realizing
-# the port was already taken :(
+# the port was already taken by other instance of postgres :(
   
 application_port: 0
 database:
-  host: "127.0.0.1"
+  host: "localhost"
   port: 5432
   username: "postgres"
   password: "password"
