--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,16 +18,9 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 reqwest = "0.11.23"
 serde = {version = "1", features = ["derive"]}
 config = "0.11"
-
-
-[dependecies.sqlx]
-version = "0.5.7"
-default-features = false
-features = [
-    "runtime-actix-rustls",
-    "macros",
-    "postgres",
-    "uuid",
-    "chrono",
-    "migrate",
-]
+sqlx = {version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
+uuid = {version = "0.8.1", features = ["v4"]}
+chrono = "0.4.15"
+env_logger = "0.9"
+log = "0.4"
+tracing = {version = "0.1", feature = ["log"]}
