--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,11 @@ config = "0.11"
 sqlx = {version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
 uuid = {version = "0.8.1", features = ["v4"]}
 chrono = "0.4.15"
-env_logger = "0.9"
-log = "0.4"
+once_cell = "1"
+secrecy  = {version = "0.8", features = ["serde"]}
+
 tracing = {version = "0.1", feature = ["log"]}
+tracing-subscriber = {version = "0.3", features = ["registry", "env-filter"]}
+tracing-bunyan-formatter = "0.3"
+tracing-log = "0.1"
+tracing-actix-web = "0.5"
