Added more documentation to scripts

--- a/example .env
+++ b/example .env
@@ -1,2 +1,2 @@
-# Add Database URL for SQLX here
+# Add Database URL here, this URL is used by SQLX-CLI to perform database migration and by SQLX to perform compile time query verification.
 DATABASE_URL="postgres://postgres:password@localhost:5432/newsletter"
