--- a/.github/workflows/general.yml
+++ b/.github/workflows/general.yml
@@ -76,6 +76,9 @@ jobs:
       - name: Migrate database
         run: SKIP_DOCKER=true ./scripts/init_db.sh
 
+      - name: Check Sqlx-data.json is up to database
+        run: cargo sqlx prepare --workspace --check
+
       - name: Run tests
         run: 
           DATABASE_URL=postgres://postgres:password@localhost:5432/newsletter
