--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,8 +21,8 @@ tokio = {version = "1", features = ["macros", "rt-multi-thread"]}
 reqwest = "0.11.23"
 serde = {version = "1", features = ["derive"]}
 config = "0.11"
-sqlx = {version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
-uuid = {version = "0.8.1", features = ["v4"]}
+sqlx = { version = "0.7.4", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"]}
+uuid = {version = "1", features = ["v4", "serde"]}
 chrono = "0.4.15"
 once_cell = "1"
 secrecy  = {version = "0.8", features = ["serde"]}
